--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -14,6 +14,23 @@
           <tr><th>Name</th><td><%= @user.user_name %></td></tr>
           <tr><th>Address</th><td><%= @user.email %></td></tr>
         </table>
+
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th class="col-sm-3">作品名</th>
+              <th class="col-sm-9">作成詳細</th>
+            </tr>
+          </thead>
+          <% @user_spot = UserSpot.find_by(user_id: @user.id) %>
+          <% @spot = Spot.where('review_flag = ?',true).where(id: @user_spot.spot_id) %>
+          <% @spot.each do |data| %>
+            <tr>
+              <td><%= data.spot_name %></td>
+              <td><%= data.details %></td>
+            </tr>
+          <% end %>
+        </table>
       </h1>
     </section>
   </aside>
