--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,7 @@ $gray-medium-light: #eaeaea;
 /* universal */
 
 body {
+	background-color: #eeeeee;
   padding-top: 60px;
 }
 
@@ -59,6 +60,9 @@ p {
   line-height: 1.7em;
 }
 
+div .card-header {
+  background-color: #eeeeee;
+}
 
 /* header */
 #logo {
