--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -16,13 +16,13 @@
         </table>
 
         <table class="table">
-          <% @user_spot = UserSpot.find_by(user_id: @user.id) %>
-          <% @spot = Spot.where('review_flag = ?',true).where(id: @user_spot.spot_id) %>
+          <% @user_spot = UserSpot.where('user_id = ?', @user.id) %>
+          <% @spot = Spot.where('review_flag = ? and id in (?)', true, @user_spot.select(:spot_id).map(&:spot_id)) %>
           <% @spot.each do |data| %>
             <tr>
               <td class="table-img">
                 <% if data.images? %>
-                  <%= image_tag(data.images[0].url, class: "img-thumbnail", size: 100) %>
+                  <%= image_tag(data.images[0].url, size: 100) %>
                 <% else %>
                   <%= image_tag("icon/NoImage.png", size: 100) %>
                 <% end %>
