--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -3,7 +3,13 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th scope="col"><%= image_tag( @detail[0].images[0].url , :size => "150x150") if @detail[0].images? %></td>
+                    <th scope="col">
+                        <% if @detail[0].images? %>
+                            <%= image_tag( @detail[0].images[0].url , :size => "150x150") %>
+                        <% else %>
+                            <%= image_tag("icon/NoImage.png", size: "150x150") %>
+                        <% end %>
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -23,7 +29,7 @@
                 </tr>
                 <tr>
                     <th scope="row">住所：</th>
-                    <td><%= @detail[0].prefecture.name +  @detail[0].address_city + @detail[0].address_street + @detail[0].address_building %></td>
+                    <td><%= @detail[0].prefecture.name + " " + @detail[0].address_city + " " +  @detail[0].address_street + " " + @detail[0].address_building %></td>
                 </tr>
                 <tr>
                     <th scope="row">詳細：</th>
