--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, @user.user_name + "の") %>
+<% provide(:title, @user.user_name) %>
 <div class="row">
   <aside>
     <section class="user_info">
