--- a/web_rails/myapp/app/views/users/fav_show.html.erb
+++ b/web_rails/myapp/app/views/users/fav_show.html.erb
@@ -1,6 +1,26 @@
-<% @fav_spot.each do |fav| %>
-    <li id="fav_spot">
-        <span class="spot"><%= fav.spot_name %></span>
-        <span class="rate"><%= fav.rate %></span>
-    </li>
-<% end %>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+            <th class="col-sm-8">スポット名</th>
+            <th class="col-sm-4">削除</th>
+            </tr>
+        </thead>
+        <tbody>
+        <% @fav_spot.each do |data| %>
+        <tr>
+            <td>
+            <%= link_to search_detail_path(spot_id: data.id) do %>
+                <%= data.spot_name %>
+            <% end %>
+            </td>
+            <td>
+            <%= link_to plan_destroy_path(id: data.id), method: :delete , class:"btn btn-link btn-lg" do %>
+                <i class="glyphicon glyphicon-trash"></i>
+            <% end %>
+            </td>
+        </tr>
+        <% end %>
+        </tbody>
+        </table>
+    </div>
