--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -4,6 +4,7 @@
   <hr><p class="center">タイムライン</p>
   <%= render('search/time_line') %>
 <% else %>
+  <!--
   <div class="py-4">
     <div class="container">
       <div id="main_visual" class="carousel slide" data-ride="carousel">
@@ -54,18 +55,62 @@
       </div>
     </div>
    </div>
-   <br>     
-  <div class="center jumbotron" style="background-color:white;">
-    <h1>さくれへようこそ！</h1>
+  <br>
+  -->
 
+  </div>
+  <div class="center jumbotron">
+    <h1>さくれへようこそ！</h1>
     <h2>
       「さくれ」はあなたの観光を有意義なものにしてくれます！
     </h2>
-
     <%= link_to "アカウントを作成する", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
-  
-  <%= render('search/search') %>
-  
+  <section id="services" style="background-color:rgb(174, 219, 230);">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">At Your Service</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="text-primary glyphicon glyphicon-search" style="font-size: 80px"></i>
+            <h3 class="mb-3">検索</h3>
+            <p class="text-muted mb-0">作品名や地域で検索しよう！</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="text-primary glyphicon glyphicon-ok" style="font-size: 80px"></i>
+            <h3 class="mb-3">ピックアップ</h3>
+            <p class="text-muted mb-0">検索結果から行きたい場所をピックアップ！</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="text-primary glyphicon glyphicon-list-alt" style="font-size: 80px"></i>
+            <h3 class="mb-3">作成</h3>
+            <p class="text-muted mb-0">行きたい場所が決まれば巡礼表を作成！</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="text-primary glyphicon glyphicon-globe" style="font-size: 80px"></i>
+            <h3 class="mb-3">巡礼</h3>
+            <p class="text-muted mb-0">作った巡礼表を元に旅行しよう！</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div>
+    <%= render('search/search') %>
+  </div>
 <% end %>
