--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -50,9 +50,16 @@
         <%= render 'rate/rate' , detail: @detail[0] %>
         <br>
         <hr>
-        <div id="comments_area">
-        <%= render 'comment/comment' %>
-
+        <div>
+            <h2>コメント</h2>
+            <% if current_user %>
+                <%= render 'comment/form' , comment: @comment%>
+            <% else %>
+                <h2>コメントするには<%= link_to "ログイン", login_path %>してください</h2>
+            <% end %>
+            <div id="comment_area">
+                <%= render 'comment/comment' , comments: @comments%>
+            </div>
         </div>
     </div>
 </div>
