[Change] 複数のデザイン変更

--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
               </td>
               <td class="table-txt">
                 <%= data.spot_name %><br>
-                <%= data.details %>
+                <p class="text-muted" style="font-size: 14px;"><%= data.details %></p>
               </td>
             </tr>
           <% end %>
