--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -12,7 +12,7 @@
       </td>
       <td class="table-text">
         <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %><br>
-        <%= data.details %><br><br>
+        <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br><br>
         <%= render 'favorite/favorite' , detail: data%>
         <%= render 'rate/rate' , detail: data %>
         <span class="timestamp"> 
