--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -3,21 +3,19 @@
 <% @spot.each do |data| %>
   <table class="table">
     <tr>
-      <td class="table-img">
+      <td>
         <% if data.images? %>
           <%= image_tag(data.images[0].url, size: 100) %>
         <% else %>
           <%= image_tag("icon/NoImage.png", size: 100) %>
         <% end %>
       </td>
-      <td class="table-text">
-        <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %><br>
-        <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br><br>
+      <td style="width: 3000px;margin-left: auto;">
+        <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
+        <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
+        <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
         <%= render 'favorite/favorite' , detail: data%>
         <%= render 'rate/rate' , detail: data %>
-        <span class="timestamp"> 
-          <%= time_ago_in_words(data.updated_at) %>前
-        </span>
       </td>
     </tr>
   </table>
