--- a/web_rails/myapp/app/views/users/show_spot.html.erb
+++ b/web_rails/myapp/app/views/users/show_spot.html.erb
@@ -7,30 +7,29 @@
 <% @spot.each do |data| %>
   <table class="table">
     <tr>
-      <td class="table-img">
+      <td>
         <% if data.images? %>
           <%= image_tag(data.images[0].url, size: 100) %>
         <% else %>
           <%= image_tag("icon/NoImage.png", size: 100) %>
         <% end %>
       </td>
-      <td class="table-text">
-        <%= data.spot_name %>
-        <% if data.review_flag %>
-          <span class="label label-info">公開</span>
-        <% else %>
-          <span class="label  label-danger">編集中</span><br>
-        <% end %>
-        <br>
-        <%= data.details %><br><br>
+      <td style="width: 3000px;margin-left: auto;">
+        <div class="form-inline">
+          <% if data.review_flag %>
+            <span class="label label-info">公　開</span>
+          <% else %>
+            <span class="label  label-danger">編集中</span>
+          <% end %>
+          <%= data.spot_name %>
+          <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
+        </div>
+        <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
         <a class="btn-group">
           <%= button_to "編集", { controller: 'spot', action: 'edit' }, {method: :get, params: {spot_id: data.id}, class: "btn btn-primary btn-sm"} %>
         </a>
         <%= render 'favorite/favorite' , detail: data%>
         <%= render 'rate/rate' , detail: data %>
-        <span class="timestamp"> 
-          <%= time_ago_in_words(data.updated_at) %>前
-        </span>
       </td>
     </tr>
   </table>
