--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -15,7 +15,8 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle text-danger" data-toggle="dropdown">
-               Tourist Spot <b class="caret"></b>
+              <span class="glyphicon glyphicon-ok"></span>
+              Tourist Spot <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Add", add_spot_path %></li>
@@ -24,6 +25,7 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-list-alt"></span>
               Planning <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
@@ -33,6 +35,7 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
