--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -1,6 +1,7 @@
 <br>
 <% @spot = Spot.where('review_flag = ?',true).order('updated_at DESC') %>
-<div class="col-md-9">
+<div class="col-md-6">
+  <hr><p class="center">タイムライン</p>
   <% @spot.each do |data| %>
     <table class="table">
       <tr>
