--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <% if logged_in? %>
-  <div class="">
-  <%= render('search/search') %>
-  <hr><p class="center">タイムライン</p>
-  <%= render('search/time_line') %>
-<% else %>
+  <div>
+    <%= render('search/search') %>
+    <%= render('search/time_line') %>
+    <%= render('search/ranking') %>
   </div>
+<% else %>
   <div class="center jumbotron">
     <h1>さくれへようこそ！</h1>
     <h2>
