--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -1,25 +1,23 @@
-<br>
 <% @spot = Spot.where('review_flag = ?',true).order('updated_at DESC') %>
+<h4 class="center">タイムライン</h4>
 
-  <hr><p class="center">タイムライン</p>
-  <% @spot.each do |data| %>
-    <table class="table">
-      <tr>
-        <td>
-          <% if data.images? %>
-            <%= image_tag(data.images[0].url, size: 100) %>
-          <% else %>
-            <%= image_tag("icon/NoImage.png", size: 100) %>
-          <% end %>
-        </td>
-        <td style="width: 3000px;margin-left: auto;">
-          <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
-          <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
-          <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
-          <%= render 'favorite/favorite' , detail: data%>
-          <%= render 'rate/rate' , detail: data %>
-        </td>
-      </tr>
-    </table>
-  <% end %>
-</div>
+<% @spot.each do |data| %>
+  <table class="table">
+    <tr>
+      <td>
+        <% if data.images? %>
+          <%= image_tag(data.images[0].url, size: 100) %>
+        <% else %>
+          <%= image_tag("icon/NoImage.png", size: 100) %>
+        <% end %>
+      </td>
+      <td style="width: 3000px;margin-left: auto;">
+        <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
+        <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
+        <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
+        <%= render 'favorite/favorite' , detail: data%>
+        <%= render 'rate/rate' , detail: data %>
+      </td>
+    </tr>
+  </table>
+<% end %>
