--- a/web_rails/myapp/app/views/search/search.html.erb
+++ b/web_rails/myapp/app/views/search/search.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "検索") %>
 
-<div class="col-md-6 col-md-offset-3">
-<%= render partial: 'search' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render partial: 'search' %>
+  </div>
 </div>
