masterブランチの変更取り込み

--- a/web_rails/myapp/app/views/search/search.html.erb
+++ b/web_rails/myapp/app/views/search/search.html.erb
@@ -1,1 +1,7 @@
-<%= render partial: 'search' %>
+<% provide(:title, "検索") %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render partial: 'search' %>
+  </div>
+</div>
