--- a/web_rails/myapp/app/views/users/fav_show.html.erb
+++ b/web_rails/myapp/app/views/users/fav_show.html.erb
@@ -15,7 +15,9 @@
             <% end %>
             </td>
             <td>
-            
+            <%= link_to plan_destroy_path(id: data.id), method: :delete , class:"btn btn-link btn-lg" do %>
+                <i class="glyphicon glyphicon-trash"></i>
+            <% end %>
             </td>
         </tr>
         <% end %>
