--- a/web_rails/myapp/app/views/comment/_form.html.erb
+++ b/web_rails/myapp/app/views/comment/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_with(model: [comment]) do |f| %>
     <%= f.text_area :comment %>
+    <%= f.file_field :images, id:'file', multiple: true %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.hidden_field :spot_id, :value => params[:spot_id] %>
     <br>
