[add]ピックアップ参照ページのデザイン修正

--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -11,7 +11,7 @@
     <% end %>
     </div>
 <% else %>
-    <%= link_to "#", class:"btn btn-link btn-sm" , remote: true do %>
+    <%= link_to "#", class:"btn btn-link btn-sm disabled" , remote: true do %>
         <i class="glyphicon glyphicon-new-window">リストに追加</i>
     <% end %>
 <% end %>
