--- a/web_rails/myapp/app/views/users/fav_show.html.erb
+++ b/web_rails/myapp/app/views/users/fav_show.html.erb
@@ -1,23 +1,62 @@
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-            <th class="col-sm-8">スポット名</th>
-            <th class="col-sm-4">削除</th>
-            </tr>
-        </thead>
-        <tbody>
-        <% @fav_spot.each do |data| %>
-        <tr>
-            <td>
-            <%= link_to search_detail_path(spot_id: data.id) do %>
-                <%= data.spot_name %>
-            <% end %>
-            </td>
-            <td>
-            </td>
-        </tr>
-        <% end %>
-        </tbody>
-        </table>
+<% provide(:title, "PickUp") %>
+<h1>ピックアップリスト</h1>
+<div class="row">
+  <br>
+
+  <div class="col-md-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border-radius: 16px;">
+              <div class="well profile col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                  <figure>
+                    <% if @user.image_name? %>
+                      <tr><td><%= image_tag @user.image_name.thumb.url, class: "img-circle" %></td></tr>
+                    <% else %>
+                      <tr><td><%= image_tag("icon/NoImage.png", size: 100, class: "img-circle") %></td></tr>
+                    <% end %>
+                  </figure>
+                  <h5 style="text-align:center;">
+                    <strong id="user-name">
+                      <%= @user.user_name %>
+                    </strong>
+                  </h5>
+                  <p style="text-align:center;font-size: smaller;overflow-wrap: break-word;" id="user-email">
+                    <%= @user.email %>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div id="show-fav" class="col-md-9">
+    <% @fav_spot.each do |data| %>
+      <table class="table">
+        <tr>
+          <td>
+            <% if data.images? %>
+              <%= image_tag(data.images[0].url, size: 100) %>
+            <% else %>
+              <%= image_tag("icon/NoImage.png", size: 100) %>
+            <% end %>
+          </td>
+          <td style="width: 3000px;margin-left: auto;">
+            <div class="form-inline">
+              <%= data.spot_name %>
+              <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
+            </div>
+            <p class="text-muted" style="font-size: 14px;"><%= data.details %></p>
+            <%= link_to unfav_path(data.id), class:"btn btn-link btn-sm" ,method: :delete do %>
+                <i class="glyphicon glyphicon-new-window">削除</i>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+    <% end %>
+  </div>
+</div>
