--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -3,8 +3,13 @@
     <%= render partial: 'search' %>
   </div>
 
+  <!-- 検索結果に作品名表示する -->
   <div class="col-md-6 col-md-offset-3">
-    <hr><P class="center">検索結果</p>
+    <% product_name = fetch_product_name(@result) %>
+    <hr>
+    <p class="center">
+      <%= product_name.join(' ')+'の検索結果' %>
+    </p>
     <% @result.each do |data| %>
       <table class="table">
         <tr>
