[Change] 検索結果表示変更

--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -8,7 +8,11 @@
     <% product_name = fetch_product_name(@result) %>
     <hr>
     <p class="center">
-      <%= product_name.join(' ')+'の検索結果' %>
+      <% if product_name.blank? %>
+        <%= '該当するスポットが見つかりませんでした:('%>
+      <% else %>
+        <%= '「'+product_name.join(' ')+'」のスポットが見つかりました' %>
+      <% end %>
     </p>
     <% @result.each do |data| %>
       <table class="table">
