--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -11,6 +11,7 @@
       <% if product_name.blank? %>
         <%= '該当するスポットが見つかりませんでした:('%>
       <% else %>
+        <!-- 作品名の数が多くなった場合の処理はまだ書いてない-->
         <% format_product_name = '「'+product_name.join(' ')+'」' %>
         <% str_result_cnt = @result.length.to_s %>
         <%= format_product_name+'のスポットが'+str_result_cnt+'件見つかりました。' %>
@@ -27,9 +28,9 @@
             <% end %>
           </td>
           <td style="width: 3000px;margin-left: auto;">
-            <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
-            <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
-            <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
+            <%= link_to data.spot_name ,search_detail_path(spot_id: data.id), style: "font-size: 18px" %>
+            <d class="text-muted" style="font-size: 16px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
+            <p class="text-muted" style="font-size: 16px;"><%= data.details %></p><br>
             <%= render 'favorite/favorite' , detail: data%>
             <%= render 'rate/rate' , detail: data %>
           </td>
