--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -5,16 +5,16 @@
 
   <!-- 検索結果に作品名表示する -->
   <div class="col-md-6 col-md-offset-3">
-    <% product_name = fetch_product_name(@result) %>
+    <% product_names = fetch_product_names(@result) %>
     <hr>
     <p class="center">
-      <% if product_name.blank? %>
+      <% if product_names.blank? %>
         <%= '該当するスポットが見つかりませんでした:('%>
       <% else %>
         <!-- 作品名の数が多くなった場合の処理はまだ書いてない-->
-        <% format_product_name = '「'+product_name.join(' ')+'」' %>
-        <% str_result_cnt = @result.length.to_s %>
-        <%= format_product_name+'のスポットが'+str_result_cnt+'件見つかりました。' %>
+        <% format_product_names = '「'+product_names.join(' ')+'」' %>
+        <% str_result_cnts = @result.length.to_s %>
+        <%= format_product_names+'のスポットが'+str_result_cnts+'件見つかりました。' %>
       <% end %>
     </p>
     <% @result.each do |data| %>
