[Change] 検索フォームタブ名変更

--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -5,13 +5,13 @@
   <div class="panel-heading">
     <ul class="nav nav-tabs">
       <li class="active">
-        <a href="#product-tab" data-toggle="tab">作品名</a>
+        <a href="#product-tab" data-toggle="tab">作品</a>
       </li>
       <li>
         <a href="#pref-tab" data-toggle="tab">地域</a>
       </li>
       <li>
-        <a href="#product-and-pref-tab" data-toggle="tab" >作品名×地域</a>          
+        <a href="#product-and-pref-tab" data-toggle="tab" >作品×地域</a>          
       </li>
     </ul>
   </div>
