[Change] 検索フォーム内のレイアウト変更

--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -61,3 +61,11 @@ ul.ui-autocomplete {
 .panel-body {
   background-color:　white;
 }
+
+label#city-area {
+  display: block !important;
+}
+
+input#product {
+  width: 75%;
+}
