--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,11 @@ html {
   flex: 1;
 }
 
+select {
+  width: 75% !important;
+
+}
+
 body {
   font-family: 'Kosugi Maru', sans-serif;
 	background-color: #eeeeee;
