--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -41,7 +41,7 @@
               class: "form-horizontal"
               ) do 
         %>
-          <div class="form-inline center">
+          <div class="form-inline">
             <%= render partial: 'search/pref_city_form' %>
           </div>
           <%= submit_tag "検索", name: nil, class: "btn btn-primary" %>
