--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -7,7 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag("icon/さくれロゴメイリオ4.png", :size => "112x50"), root_url %>
+      <%= link_to image_tag(
+        "icon/さくれロゴメイリオ4.png", :size => "120x40"
+        ),
+        root_url,
+        style: "font-size: xx-large" #画像の位置無理やり変えてます
+      %>
     </div>        
     <nav>
       <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
