--- a/web_rails/myapp/app/views/spot/new.html.erb
+++ b/web_rails/myapp/app/views/spot/new.html.erb
@@ -7,7 +7,12 @@
       <table class="table">
         <tr>
           <th>作品名</th>
-          <td><%= f.text_field :product_name, class: 'form-control' %></td>
+          <td>
+            <%= f.text_field :product_name,
+              class: 'form-control auto-complete',
+              autocomplete: 'off'
+            %>
+          </td>
         </tr>
         <tr>
           <th>ジャンル</th>
