--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <table class="table table-striped">
+        <table class="table table-striped bg-danger">
             <thead>
                 <tr>
                     <th scope="col">
