--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -62,4 +62,18 @@
             </div>
         </div>
     </div>
+    <div id="map" style="height: 370px; width: 370px;"></div>
 </div>
+<%=
+map(:center => {
+    :latlng => [@detail[0].latitude, @detail[0].longitude],
+    :zoom => 18,
+},
+  :markers => [
+    {
+     :latlng => [@detail[0].latitude, @detail[0].longitude],
+     :popup => "#{@detail[0].spot_name}"
+    }
+  ]
+)
+%>
